tests/paczka1/small_fuzzy/62461052.err
Error in line 1: LoMx S772 16,6
Error in line 3: LoMx A899 71,3
Error in line 5: LoMx S671 93,2
Error in line 9: XtB9 A47 76,5
